<resources>
	<string name="app_name" translatable="false">Houseclub</string>
	<string name="login">Login</string>
	<string name="phone_number">Phone number</string>
	<string name="enter_your_phone">Enter your phone #</string>
	<string name="sms_code">Code from SMS</string>
	<string name="resend_code_message">Did not receive it?</string>
	<string name="resend_code_button">Tap to resend</string>
	<string name="next">Next</string>
	<string name="warning">Warning!</string>
	<string name="warning_text">This is an <b>unofficial</b> app. Using this might get your Clubhouse account permanently banned. Proceed at your own risk.</string>
	<string name="i_understand">I understand</string>
	<string name="loading">Loading...</string>
	<string name="error_loading">Error loading data</string>
	<string name="waitlist">Wait list</string>
	<string name="waitlist_text">You\'re waiting for someone to invite you to Clubhouse. Your account is currently inactive.</string>
	<string name="log_out">Log out</string>

	<string name="ongoing_call">Ongoing call</string>
	<string name="leave_room">Leave room</string>
	<string name="join_this_room">Join this room?</string>
	<string name="join">Join</string>
	<string name="cancel">Cancel</string>
	<string name="followed_by_speakers">Followed by the speakers</string>
	<string name="others_in_room">Others in the room</string>
	<string name="confirm_join_as_speaker">%s invites you to join as a speaker, accept?</string>
	<string name="register">Register</string>
	<string name="first_name">First name</string>
	<string name="last_name">Last name</string>
	<string name="username">Username</string>
	<string name="complete_registration">Complete registration</string>
	<string name="all_fields_are_required">All fields are required</string>
	<string name="username_limit">Username can\'t be longer than 16 characters</string>
	<string name="register_warning">Registration in this <b>unofficial</b> app is as experimental a feature as the app itself. There\'s always a non-zero possibility of a ban if you don\'t use the official app to register. It would work better if you borrow an iOS device from someone, but you could still try registering from Android.\n\nPlease be aware that you\'ll only be able to change your name <b>once</b> after you register. Please use your real name.</string>
	<string name="welcome_to_clubhouse">Welcome to Clubhouse!</string>
	<plurals name="followers">
		<item quantity="one">%d follower</item>
		<item quantity="other">%d followers</item>
	</plurals>
	<plurals name="following">
		<item quantity="one">%d following</item>
		<item quantity="other">%d following</item>
	</plurals>
	<plurals name="invites">
		<item quantity="one">You have %d invite</item>
		<item quantity="other">You have %d invites</item>
	</plurals>
	<string name="invite_button_label">Invite</string>
	<string name="invite_phone_hint">Enter phone number</string>
	<string name="follows_you">Follows you</string>
	<string name="follow">Follow</string>
	<string name="following">Following</string>
	<string name="invite_to_room">Invite People to Room</string>
	<string name="followers_title">Followers</string>
	<string name="following_title">Following</string>
	<string name="event_title">Upcoming Events</string>
	<string name="search_people_hint">Search People</string>
	<string name="search_clubs_hint">Search Clubs</string>
	<string name="notifications_title">Notifications</string>
	<string name="confirm_unfollow">Unfollow <b>%s</b>?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="joined_date">Joined %s</string>
	<string name="invited_by">Nominated by %s</string>
	<string name="update_bio">Update bio</string>
	<string name="update_name">Update name</string>
	<string name="save">Save</string>
	<string name="event_not_started">This event hasn\'t started yet</string>
	<string name="add_instagram">Link instagram</string>
	<string name="confirm_unlink_instagram_title">Unlink instagram?</string>
	<string name="confirm_unlink_instagram">Are you sure want to unlink instagram? It can be linked in future</string>
	<string name="instagram_linked">Instagram linked, reopen page to see</string>
	<string name="event_expired">This event has already ended</string>
	<string name="log_in_to_activate">Please log in again to activate your account.</string>
	<string name="ok">OK</string>
	<string name="add_instagram">Link instagram</string>
	<string name="confirm_unlink_instagram_title">Unlink instagram?</string>
	<string name="confirm_unlink_instagram">Are you sure want to unlink instagram? It can be linked in future</string>
	<string name="instagram_linked">Instagram linked, reopen page to see</string>
	<string name="search_people_hint">Find People</string>
	<string name="search_clubs_hint">Find Clubs</string>
	<string name="search_btn_cancel">Cancel</string>
	<string name="search_error_no_users">No users found</string>
	<string name="search_error_no_clubs">No clubs found</string>
	<string name="invite_dialog_title">Send invite</string>
	<string name="invite_dialog_text">Invite %s (%s) to Clubhouse</string>
	<string name="invite_ok">Invite sent successfully</string>
	<string name="invite_err">Unexpected error: %s</string>
	<string name="contact_invites">You have %d invites</string>
	<string name="contact_in_app">In Clubhouse: %s</string>
	<string name="contact_is_invited">Is invited: %s</string>
	<string name="contact_num_friends">%d friends on Clubhouse</string>
	<string name="contact_separator" translatable="false">,&#160;</string>
    <string name="return_to_channel">Return to %1$s</string>
    <string name="mutual_followers_title">Mutual Followers</string>
</resources>
