<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">

		<EditText
			android:id="@+id/phone_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:inputType="phone"
			android:hint="@string/phone_number"/>

		<EditText
			android:id="@+id/code_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:inputType="number"
			android:hint="@string/sms_code"/>

		<Button
			android:id="@+id/resend_code"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="8dp"
			android:text="@string/resend_code"/>

		<Button
			android:id="@+id/next"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/next"/>

	</LinearLayout>

</ScrollView>